--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <h2>Software Developer. Scientist. Life-long learner. Passion for technology. </h2>
                     <p class="lead">Thank you for visiting my portfolio. I am software/web developer currently looking for new opportunities.</p>
                     <p class="lead">I recently graduated from Coding Dojo, an intensive coding bootcamp in Bellevue, WA. I am capable of using three different stacks for web development, including Python, MEAN, and ASP.NET Core with C#.</p>
-                    <p class="lead">If you have a project ideas or technologies you would like to share, please do not hesitate to <a href="#contact">contact me</a>!</p>
+                    <p class="lead">If you have a project ideas or technologies you would like to share, please do not hesitate to <a href="#mailto:choeku86@gmail.com">contact me</a>!</p>
                     <a href="#resumeModal" data-toggle="modal" class="">
                         <button class="btn">Resume</button>
                     </a>
@@ -400,6 +400,28 @@
         // Enable map zooming with mouse scroll when the user clicks the map
     $('.map').on('click', onMapClickHandler);
     </script>
+
+    <!-- Résumé Modal -->
+    <div class="portfolio-modal modal fade" id="resumeModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                              <script src="https://gist.github.com/choekr/f12a0c01b90bc424b16fdd1bf2e25433.js"></script>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 
