--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                     <p class="lead">Thank you for visiting my portfolio. I am software/web developer currently looking for new opportunities.</p>
                     <p class="lead">I recently graduated from Coding Dojo, an intensive coding bootcamp in Bellevue, WA. I am capable of using three different stacks for web development, including Python, MEAN, and ASP.NET Core with C#.</p>
                     <p class="lead">If you have a project ideas or technologies you would like to share, please do not hesitate to <a href="#mailto:choeku86@gmail.com">contact me</a>!</p>
-                    <a href="#resumeModal" data-toggle="modal" class="">
-                        <button class="btn">Resume</button>
+                    <a href="#résuméModal" data-toggle="modal" class="">
+                        <button class="btn">Résumé</button>
                     </a>
                 </div>
             </div>
@@ -113,7 +113,7 @@
                                     <br>AngularJS
                                     <br>NodeJS
                                 </p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
 
@@ -131,7 +131,7 @@
                                     <br>Flask
                                     <br>Django
                                 </p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -150,7 +150,7 @@
                                     <br>Dapper
                                     <br>Entity Framework
                                 </p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
 
@@ -176,7 +176,7 @@
                                     <br>Atom
                                     <br>Phaser
                                 </p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
                         <!-- <div class="col-md-3 col-sm-6">
@@ -225,33 +225,57 @@
                                 <!-- <a href="#"> -->
                                     <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
                                     <div class='overlay'>
-                                      <h2>Q&A</h2>
+                                      <h2>Q&A - Using MEAN</h2>
                                       <p>Simple Q&A website<br>
                                       Ask, Answer, Like!</p>
-                                      <a class='info' href="#">View project</a>
+                                      <a class='info' href="https://github.com/choekr/Q_and_A">View project</a>
                                     </div>
                                 <!-- </a> -->
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
+                                <div class="portfolio-item hovereffect">
+
+                                <!-- <a href="#"> -->
                                     <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
-                                </a>
+                                    <div class='overlay'>
+                                      <h2>DojoDachi - Using C#/ASP.NET Core</h2>
+                                      <p>Feed your virtual pet<br>
+                                      and Love them!</p>
+                                      <a class='info' href="https://github.com/choekr/CodingDojo/tree/master/3_CSharp_Stack/ASP.NET.Core/dojodachi">View project</a>
+                                    </div>
+                                <!-- </a> -->
+                                </div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
+                                <div class="portfolio-item hovereffect">
+                                <!-- <a href="#"> -->
                                     <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
-                                </a>
+                                    <div class='overlay'>
+                                      <h2>Ninja Gold - Django</h2>
+                                      <p>Make Gold and have fun!</p>
+                                      <a class='info' href="https://github.com/choekr/CodingDojo/tree/master/2_Python_Stack/Django/ninja_gold_django">View project</a>
+                                    </div>
+                                <!-- </a> -->
+                                </div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
+                                <div class="portfolio-item hovereffect">
+                                <!-- <a href="#"> -->
                                     <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
-                                </a>
+                                    <div class='overlay'>
+                                      <h2>More Projects Coming Soon</h2>
+                                      <!-- <p>Simple Q&A website<br>
+                                      Ask, Answer, Like!</p>
+                                      <a class='info' href="#https://github.com/choekr/Q_and_A">View project</a> -->
+                                    </div>
+                                <!-- </a> -->
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -270,9 +294,35 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h3>The buttons below are impossible to resist.</h3>
+<!--                     <h3>Contact</h3>
                     <a href="#" class="btn btn-lg btn-light">Click Me!</a>
-                    <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
+                    <a href="#" class="btn btn-lg btn-dark">Look at Me!</a> -->
+                    <h4><strong>Contact</strong></h4>
+                    <h3> Kukrim Choe </h3>
+                    <ul class="list-unstyled">
+                    </ul>
+                    <br>
+                    <ul class="list-inline">
+                        <li>
+                            <a href="mailto:choeku86@gmail.com"><i class="fa fa-envelope-o fa-fw fa-3x"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/choekr"><i class="fa fa-github fa-fw fa-3x"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/KukrimC"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/krchoe"><i class="fa fa-linkedin fa-fw fa-3x"></i></a>
+                        </li>
+                    </ul>
+
+                <div class="col-lg-10 col-lg-offset-1 text-center">
+                    <hr class="small">
+                    <p> Seattle, WA 98115 </p>
+                    <p class="text-muted">Copyright &copy; Kukrim Choe 2017</p>
+                </div>
+                
                 </div>
             </div>
         </div>
@@ -288,30 +338,10 @@
     </section> -->
 
     <!-- Footer -->
-    <footer>
+<!--     <footer style="padding-bottom: 0px, padding-top: 0px">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4><strong>Contact</strong></h4>
-                    <p> Kukrim Choe </p>
-                    <ul class="list-unstyled">
-                        <li><i class="fa fa-envelope-o fa-fw"></i>
-                            <a href="mailto:choeku86@gmail.com">choeku86@gmail.com </a>
-                        </li>
-                    </ul>
-                    <br>
-                    <ul class="list-inline">
-                        <li>
-                            <a href="https://github.com/choekr"><i class="fa fa-github fa-fw fa-3x"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/KukrimC"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.linkedin.com/in/krchoe
-"><i class="fa fa-linkedin fa-fw fa-3x"></i></a>
-                        </li>
-                    </ul>
                     <hr class="small">
                     <p> Seattle, WA 98115 </p>
                     <p class="text-muted">Copyright &copy; Kukrim Choe 2017</p>
@@ -320,7 +350,7 @@
         </div>
         <a id="to-top" href="#top" class="btn btn-dark btn-lg"><i class="fa fa-chevron-up fa-fw fa-1x"></i></a>
     </footer>
-
+ -->
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
@@ -402,7 +432,7 @@
     </script>
 
     <!-- Résumé Modal -->
-    <div class="portfolio-modal modal fade" id="resumeModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="résuméModal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
