--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                                 <!-- <a href="#"> -->
                                     <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
                                     <div class='overlay'>
-                                      <h2>Q&A - Using MEAN</h2>
+                                      <h2>Q&A - MEAN</h2>
                                       <p>Simple Q&A website<br>
                                       Ask, Answer, Like!</p>
                                       <a class='info' href="https://github.com/choekr/Q_and_A">View project</a>
@@ -240,7 +240,7 @@
                                 <!-- <a href="#"> -->
                                     <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
                                     <div class='overlay'>
-                                      <h2>DojoDachi - Using C#/ASP.NET Core</h2>
+                                      <h2>DojoDachi - C#/ASP.NET Core</h2>
                                       <p>Feed your virtual pet<br>
                                       and Love them!</p>
                                       <a class='info' href="https://github.com/choekr/CodingDojo/tree/master/3_CSharp_Stack/ASP.NET.Core/dojodachi">View project</a>
