new image for Q&A

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                         <div class="col-md-6">
                             <div class="portfolio-item hovereffect">
                                 <!-- <a href="#"> -->
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
+                                    <img class="img-portfolio img-responsive" src="img/Q&A.jpg">
                                     <div class='overlay'>
                                       <h2>Q&A - MEAN</h2>
                                       <p>Simple Q&A website<br>
@@ -322,7 +322,7 @@
                     <p> Seattle, WA 98115 </p>
                     <p class="text-muted">Copyright &copy; Kukrim Choe 2017</p>
                 </div>
-                
+
                 </div>
             </div>
         </div>
