--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
                     <!-- <h2>Our Work</h2> -->
                     <!-- <hr class="small"> -->
                     <div class="row">
+                      <!-- Portfolio #1 - Q&A -->
                         <div class="col-md-6">
                             <div class="portfolio-item hovereffect">
                                 <!-- <a href="#"> -->
@@ -233,6 +234,22 @@
                                 <!-- </a> -->
                             </div>
                         </div>
+
+                      <!-- Portfolio #2 - Bid Now -->
+                        <div class="col-md-6">
+                            <div class="portfolio-item hovereffect">
+                                <!-- <a href="#"> -->
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
+                                    <div class='overlay'>
+                                      <h2>Bid NOW - MEAN</h2>
+                                      <p>Simple Bidding website<br>
+                                      Bid and Win!</p>
+                                      <a class='info' href="https://github.com/choekr/BidNow">View project</a>
+                                    </div>
+                                <!-- </a> -->
+                            </div>
+                        </div>
+
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <div class="portfolio-item hovereffect">
@@ -270,9 +287,8 @@
                                     <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
                                     <div class='overlay'>
                                       <h2>More Projects Coming Soon</h2>
-                                      <!-- <p>Simple Q&A website<br>
-                                      Ask, Answer, Like!</p>
-                                      <a class='info' href="#https://github.com/choekr/Q_and_A">View project</a> -->
+                                      <!-- <p>DESCRIPTION GOES HERE</p>
+                                      <a class='info' href="#">View project</a> -->
                                     </div>
                                 <!-- </a> -->
                                 </div>
